--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,19 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = "1.0.218"
-tokio = "1.44.0"
+chrono = "0.4.40"
+jsonwebtoken = "9.3.1"
+serde = {version ="1.0.218", features = ["derive"]}
+serde_json = "1.0.140"
+thiserror = "2.0.12"
+tokio = {version = "1.44.0", features = ["macros", "sync", "time", "rt-multi-thread"]}
 warp = "0.3.7"
+
+[profile.dev]
+debug = 0
+
+[profile.test]
+debug = 0
+
+[profile.release]
+panic = 'abort'
